2004-08-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README:
  - Minor updates to appendices
 win32/INSTALL.txt:
  - MinGW documentation.  Thanks Michael J. Pedersen!
2004-08-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Generates MinGW Makefile
 src/connection_base.cxx:
  - activate() also when don't have PQexecPrepared()
 tools/Makefile.am:
  - Removed pqxxbench
 tools/makemingwmak.pl:
  - New
  - Generates win32/MinGW.mak
 tools/pqxxbench.cxx, tools/pqxxbench.in:
  - Deleted
2004-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/result.cxx:
  - Workaround for missing PQresultErrorField(), thanks webmaster@tsukaeru.net
2004-08-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems:
  - Added PQXX_PQ_IN_NAMESPACE (under "compiler" for now)
 configure.ac.in:
  - Added several warning options
 include/pqxx/connection.hxx, src/connection.cxx:
  - New nullconnection class for testing
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Updated activate()/deactivate() documentation to lower-case API
  - Made Status() throw ()
  - Made ErrMsg() throw ()
  - Qualified libpq functions with PQXXPQ::
 include/pqxx/result.hxx, src/result.cxx:
  - Removed initialize()'s empty throw specification
  - Qualified libpq functions with PQXXPQ::
 include/pqxx/robusttransaction.hxx, include/pqxx/transaction.hxx:
  - Separate single-arg and "named" constructors instead of default arg
 include/pqxx/util.hxx, src/util.cxx:
  - Removed namedclass::description()'s empty throw specification
  - Separate namespace for libpq is optional
 src/connection_base.cxx:
  - Forgot to read result after removing trigger
  - No longer list open triggers when closing connection
  - Extra checks for connection being open
 src/pipeline.cxx:
  - Qualified libpq functions with PQXXPQ::
 test/test000.cxx:
  - Add nullconnection checks
 test/test005.cxx, test/test013.cxx, test/test018.cxx, test/test032.cxx,
 test/test037.cxx, test/test040.cxx, test/test041.cxx, test/test056.cxx,