@@ -1,5 +1,6 @@
 2.3.0
  - Generates MinGW Makefile automatically
+ - Documents MinGW build
  - Workaround for missing PQexecPrepared()
 2.2.9
  - Bugfix in removing trigger
